css/main.css
html, body {
	overflow-y: scroll;
	-webkit-overflow-scrolling: touch;
}

#map {
	height: 535px;
}

#listContainer {
	height: 500px;
	overflow: auto;
}


.jumbotron {
	line-height: 20px;
	margin-top: 51px;
	background-color: #68B5E9 !important;
	color: white !important;
	padding-top: 0px !important;
	padding-bottom: 0px;
	height: 120px;
	background: #68B5E9;
	background-color: #68B5E9;
	background-image: -webkit-linear-gradient(#68B5E9,#FBB811);
	background-image: linear-gradient(to bottom,#68B5E9,#FBB811);
}
.header {
	overflow: hidden;
	position: relative;
	height: inherit;
	width: 100%;
	background-position: 30% 50%;
	background: url(../img/Skyline1.png) bottom no-repeat;

}


.header img{
	max-height: 110px;
/*	margin-top: 20px;*/

	-webkit-filter: drop-shadow(1px 1px 5px #333);
	filter: drop-shadow(1px 1px 5px #333);
}

.header h2 {
	-webkit-filter: drop-shadow(1px 1px 5px #333);
	filter: drop-shadow(1px 1px 5px #333);
}

.jumbotron h2 {
	margin-top: 5px;
	margin-bottom: 5px;
}

.jumbotron span {
	font-size: 10pt;
	max-width: 100px;
}

.leaflet-popup {
	min-width: 230px;
	max-width: 230px;
}

.leaflet-popup-content img {
	max-width: 200px !important;
}

.leaflet-popup-content hr {
	margin-top: 4px;
	margin-bottom: 6px;
}

.navbar-default a{
	color: #428bca !important;
}

.icon-bar {
	background-color: #428bca !important;
}

.navbar-toggle {
	border-color: #428bca !important;
}

.legend-item {
	font-size: 9pt;
	cursor: pointer;
}

.legend-item img {
	margin-right: 10px;
}

.table tr {
	cursor: pointer;
}
.container {
	width: 90%;
}

.footer {
	margin-top: 40px;
}

